# cliTokenKill

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/: settings.local.json
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
Formula/: ctk.rb
examples/adapters/: cargo-test.toml
scripts/: bench_tokens.sh  commands.codex.txt  release.sh
src/: cli.rs  commands.rs  main.rs  monitor.rs  report.rs  stats.rs  stats_server.rs
src/commands/: run.rs
src/core/: adapter.rs  budget.rs  chunk.rs  filter.rs  mod.rs  pipeline.rs  runner.rs
src/core/adapter/: loader.rs  tests.rs
src/core/pipeline/: stages.rs  tests.rs
src/debug/: explain.rs
src/engine/: content_kind.rs  mod.rs
src/engine/classify/: diff.rs  grep.rs  json.rs  logs.rs  mod.rs  stacktrace.rs  table.rs  test_output.rs
src/engine/compact/: diff.rs  grep.rs  json_like.rs  logs.rs  mod.rs  stack_trace.rs  table_text.rs  test_output.rs
src/integration/: agent.rs  claude.rs  codex.rs  mod.rs
src/integration/agent/: doctor.rs  rc.rs  tests.rs
src/integration/hooks/: mod.rs
src/mcp/: server.rs
src/stats/: store.rs  tests.rs
tests/golden/: diff.expected.txt  diff.input.txt  grep.expected.txt  grep.input.txt  json.expected.txt  json.input.txt  log.expected.txt  log.input.txt  ndjson.expected.txt  ndjson.input.txt  stacktrace.expected.txt  stacktrace.input.txt  table.expected.txt  table.input.txt  test_output.expected.txt  test_output.input.txt
