[package]
name = "cli-token-kill"
version = "0.13.0"
edition = "2024"
authors = ["Jacky Mint"]
description = "Reduce terminal output before it reaches AI assistant context"
license = "MIT"
repository = "https://github.com/jackymint/cliTokenKill"
homepage = "https://github.com/jackymint/cliTokenKill"
keywords = ["cli", "ai", "token", "optimization"]
categories = ["command-line-utilities"]

[[bin]]
name = "ctk"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1"
notify = "6"
